Hit ASSERTION FAILED: table()->collapseBorders() on techcrunch.com https://bugs.webkit.org/show_bug.cgi?id=76405

Reviewed by Julien Chaffraix.

Source/WebCore:

Tests: fast/css/nested-table-with-collapsed-borders.html

Change recalcCollapsedBorders() so that it only collects border values for the current
table. Calculating the borders for nested tables was wrong as well as wasting cycles, though it would never
have impacted rendering since a cell only paints the borders that match its own.

* rendering/RenderTable.cpp:
(WebCore::RenderTable::recalcCollapsedBorders):

LayoutTests:

* fast/css/nested-table-with-collapsed-borders-expected.html: Added.
* fast/css/nested-table-with-collapsed-borders.html: Added.

Canonical link: https://commits.webkit.org/93477@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105433 268f45cc-cd09-0410-ab3c-d52691b4dbfc